GraphQl bring up.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,14 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.security.user.name=asd
 spring.security.user.password=asd
+
+graphql.servlet.mapping = graphql
+graphql.servlet.enabled =  true
+#graphql.servlet.corsEnabled  = true
+
+graphiql.servlet.mapping = graphiql
+graphiql.servlet.enabled =  true
+graphiql.servlet.endpoint  = graphql
+
+
+
