--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,13 +11,16 @@ spring.jpa.hibernate.ddl-auto=update
 spring.security.user.name=asd
 spring.security.user.password=asd
 
-graphql.servlet.mapping = graphql
-graphql.servlet.enabled =  true
-#graphql.servlet.corsEnabled  = true
-
-graphiql.servlet.mapping = graphiql
-graphiql.servlet.enabled =  true
-graphiql.servlet.endpoint  = graphql
+graphql.servlet.enabled=true
+graphql.servlet.mapping=/graphql
+graphql.servlet.corsEnabled=true
+graphql.spring-graphql-common.clientMutationIdName=clientMutationId
+graphql.spring-graphql-common.injectClientMutationId=true
+graphql.spring-graphql-common.allowEmptyClientMutationId=false
+graphql.spring-graphql-common.mutationInputArgumentName=input
+graphql.spring-graphql-common.outputObjectNamePrefix=Payload
+graphql.spring-graphql-common.inputObjectNamePrefix=Input
+graphql.spring-graphql-common.schemaMutationObjectName=Mutation
 
 
 
