--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-server.port=8181
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-store: src/main/resources/bootsecurity.p12
+server.ssl.key-store-password: bootsecurity
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: bootsecurity
 
 spring.datasource.url=jdbc:h2:~/data/projectdb
 spring.datasource.driverClassName=org.h2.Driver
